[package]
name = "magic-loc-central"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
futures = "0.3"
tokio-serial = "5.4.4"
tokio = { version = "^1.8", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tmq = "0.4.0"

clap = { version = "4.4.11", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = "0.3"

rzcobs = "0.1"
nalgebra = "0.32"

num = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serialport_low_latency = "0.1.0"
